--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dash = "^2.9.1"
 dash-mantine-components = "^0.12.0"
 dash-iconify = "^0.1.2"
 pandas = "^1.5.3"
+Babel = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 black = "^23.1.0"
