--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dash-mantine-components = "^0.12.0"
 dash-iconify = "^0.1.2"
 pandas = "^1.5.3"
 Babel = "^2.12.1"
+dash-ag-grid = "2.0.0a4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.1.0"
