--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.5.3"
 Babel = "^2.12.1"
 dash-ag-grid = "2.0.0a4"
 gunicorn = "^20.1.0"
+dash-mantine-react-table = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^23.1.0"
