--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dash-core-components==2.0.0; python_version >= "3.6"
 dash-html-components==2.0.0; python_version >= "3.6"
 dash-iconify==0.1.2
 dash-mantine-components==0.12.0
+dash-mantine-react-table==0.0.1
 dash-table==5.0.0; python_version >= "3.6"
 dash==2.9.1; python_version >= "3.6"
 flask==2.2.3; python_version >= "3.7"
